--- a/.env
+++ b/.env
@@ -7,7 +7,10 @@
 #
 # NUNCA commite o arquivo .env no Git!
 # Adicione .env ao .gitignore
-VITE_API_BASE_URL=http://62.72.1.122:5173
+
+# === VARIÁVEIS RECONHECIDAS PELO VITE ===
+VITE_API_BASE_URL=http://62.72.1.122:8000
+VITE_WS_BASE_URL=ws://62.72.1.122:8000
 VITE_APP_VERSION=1.0.0
 
 # ===============================================
